# AgroLLM_Hack

./: .env.example  .gitignore  README.md  install.bat  install.sh  pyproject.toml  start.bat  start.sh  yandex_gpt_extraction.py
app/: auto_report.py  run_auto_report.bat  run_auto_report.sh  streamlit_app.py
data/: 12-04-2025.xlsx  abbreviations.json  chat_messages_12-04-2025.json
llm_extraction/: yandex_gpt_extraction.py
notebooks/: llm_extraction.ipynb  precision_estimation.ipynb
testing_scripts/: save_messages_to_word.py
whatsapp_parser/: wa_parser.py
